--- a/components/hyxn2p1vp-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/hyxn2p1vp-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hyxn2p1vp-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-12afbe415b.4we6.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:e55ad7ada40c91cb7d0c1575957b3bd51dad0762@sha256:38b13a7d83b203864444bda2dfe0574b58d891795e0c642bcc05df4abd0c80a0
+          name: container-image
